HttpRoute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: apps-route
  namespace: monitoring
spec:
  parentRefs:
  - name: eg
    namespace: default

  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /prometheus
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: prometheus-server
      port: 80

  - matches:
    - path:
        type: PathPrefix
        value: /grafana
    backendRefs:
    - name: grafana
      port: 80
